client/reader/tag-stream/style.scss
@import "@wordpress/base-styles/breakpoints";
@import "@wordpress/base-styles/mixins";
@import "@wordpress/base-styles/variables";

.is-section-reader .tag-stream__header {
	&.has-description {
		.info-popover {
			display: none;
		}
		.formatted-header__subtitle {
			display: inline-block;
		}
	}

	.navigation-header {
		margin: 0 auto;
		padding: 0 0 16px 0;
	}
}

// .has-header-section only applies for logged out views
.layout.has-header-section.is-section-reader .tag-stream__header .navigation-header h1 {
	@extend .wp-brand-font;
	font-weight: 600;
	font-size: 2.25rem;
	line-height: 48px;
	margin-bottom: 4px;
}

.tag-stream__header {
	margin-bottom: 10px;
	.tag-stream__header-follow .follow-button {
		background: inherit;
	}
}

.reader__content .tag-stream__header {
	margin-bottom: 0;
}

.reader__content .tag-stream__header.has-description {
	padding-bottom: 16px;
}

.tag-stream__header-title-group {
	display: block;
	padding-bottom: 40px;
}

.tag-stream__header-title {
	font-family: "Noto Serif", Georgia, "Times New Roman", Times, serif;
	font-size: 2rem;
	text-transform: capitalize;
	font-weight: 600;
	line-height: 24px;
	margin-bottom: 4px;
}

.tag-stream__header-controls {
	display: flex;
	justify-content: space-between;
	align-items: flex-start;

	@include break-small {
		padding-top: 20px;
		padding-bottom: 20px;
	}
}

.tag-stream__header-sort-picker {
	width: 200px;
}

.has-description .tag-stream__header-title {
	font-size: $font-title-small;
}

.tag-stream__header-description {
	font-family: "Noto Serif", Georgia, "Times New Roman", Times, serif;
	font-size: $font-headline-small;
	font-weight: 600;
	line-height: 48px;
}

// Back button in Tag streams
.is-reader-page .card.header-cake {
	background: none;
	box-shadow: none;
	padding: 0;
	position: relative;

	.button.header-cake__back {
		padding: 0;
	}
}

.is-reader-page .main .tag-stream__empty-content {
	margin-top: 15px;
}

// Tag page only shows site titles in the sidebar, so spacing needs to be tighter
.tag-stream__main {
	.stream__two-column .reader__content::before {
		content: "";
		background-color: #e9e9ea;
		position: absolute;
		right: -56px;
		top: 0;
		height: calc(100% + 180px);
		margin-top: -200px;
		width: 1px;
	}

	.stream__two-column .stream__right-column {
		margin-top: 0;
	}

	.reader-sidebar-site_link {
		align-items: center;
		margin-bottom: 12px;
	}
}

